--- a/index.html
+++ b/index.html
@@ -5,30 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API Pokémon - Lucca Zovedi</title>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <div id="app">
-      <div class="container">
-        <div class="search-container">
-          <input type="text" v-model="buscaPokemon" @input="searchPokemon"/>
-          <p v-if="error">{{ error }}</p>
-          <p v-if="loading">Buscando na Pokedex...</p>
-          <div v-if="pokemon">
-            <img :src="pokemon.sprites.front_default" alt="Pokémon Frente">
-            <img :src="pokemon.sprites.back_default" alt="Pokémon Costas">
-            <img :src="pokemon.sprites.other.dream_world.front_default" alt="Pokémon Costas">
-            <img :src="pokemon.sprites.other.home.front_default" alt="Pokémon Costas">
-            <p>Nome: {{ pokemon.name }}</p>
-            <p>Altura: {{ pokemon.height }}</p>
-            <p>Peso: {{ pokemon.weight }}</p>
-            <p>Tipo: {{ pokemon.types.map(t => t.type.name).join(", ") }}</p>
-            <p>Movimentos: {{ pokemon.moves.map(t => t.move.name).join("|") }}</p>
-            <p>Itens: {{ pokemon.game_indices.map(t => t.game_index).join(",") }}</p>
+    </head>
+    <body>
+      <div id="app">
+
+        <!-- PESQUISA -->
+        <div class="container">
+          <div class="search-container">
+            <input type="text" v-model="buscaPokemon" @input="searchPokemon"/>
+            <p v-if="error">{{ error }}</p>
+            <p v-if="loading">Buscando na Pokedex...</p>
+          </div>
+        </div>
+
+
+        <!-- NAVEGAA -->
+        <div v-if="pokemon">
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+              <li class="nav-item"><a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Imagens</a></li>
+              <li class="nav-item"><a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Perfil</a></li>
+              <li class="nav-item"><a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Contact</a></li>
+            </ul>
+
+
+            <!-- CONTEUDO -->
+          <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+              <img :src="pokemon.sprites.front_default" alt="Pokémon Frente">
+              <img :src="pokemon.sprites.back_default" alt="Pokémon Costas">
+              <img :src="pokemon.sprites.other.dream_world.front_default" alt="Pokémon Costas">
+              <img :src="pokemon.sprites.other.home.front_default" alt="Pokémon Costas">
+            </div>
+
+            <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+              <p>Nome: {{ pokemon.name }}</p>
+              <p>Altura: {{ pokemon.height }}</p>
+              <p>Peso: {{ pokemon.weight }}</p>
+              <p>Tipo: {{ pokemon.types.map(t => t.type.name).join(", ") }}</p>
+              <p>Movimentos: {{ pokemon.moves.map(t => t.move.name).join("|") }}</p>
+              <p>Itens: {{ pokemon.game_indices.map(t => t.game_index).join(",") }}</p>
+              <p>Estatísticas: {{ pokemon.stats.map(t => t.game_index).join(",")  }}</p>
+            </div>
+
+            <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+            </div>
           </div>
         </div>
       </div>
+      </div>
     </div>
   </body>
+    <!-- SCRIPTS -->
   <script src="index.js"></script>
 </html>
