--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       <!-- links css-->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
       <link rel="stylesheet" href="./src/css/styles.css">
-      <link href="./src/script/index.js">
       <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/pokemon" type="text/css"/>
       <!--ícone da página -->
       <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/1408/1408998.png" type="image/x-icon">
@@ -26,11 +25,15 @@
                <div id="optionsContainer"></div>
                <p v-if="error">{{ error }}</p>
                <p v-if="loading">Buscando na Pokedex...</p>
+               <img v-if="img" style="margin-top:5vh" src="https://cdn-icons-png.flaticon.com/512/1752/1752776.png"/>
             </div>
          </div>
          <!-- PRIMEIRA IMAGEM -->
          <center>
-            <div v-if="pokemon"><img :src="pokemon.sprites.other.dream_world.front_default" alt="Pokémon Desenho"><p style="font-style: italic"><strong>{{ nome }}</strong></p></div>
+            <div v-if="pokemon">
+              <img :src="pokemon.sprites.other.dream_world.front_default" alt="Pokémon Desenho">
+            <p style="font-style: italic"><strong>{{ nome }}</strong></p>
+            </div>
          </center>
          <div v-if="pokemon">
             <!-- NAVEGAÇÃO -->
